--- a/Views/contacto.html
+++ b/Views/contacto.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
-    <link rel="stylesheet" type="text/css"
-        href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../assets/css/estilos.css">
 </head>
 
@@ -22,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -40,7 +39,7 @@
                         <a class="nav-link" href="https://ovallehoy.cl/" target="_blank">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link active" href="#">Contacto</a>
                     </li>
                 </ul>
                 <div class="d-flex">
@@ -54,19 +53,26 @@
     </nav>
 
     <div class="container">
+
         <form>
+            <h1>Envía un mensaje</h1>
+            <div class="mb-3">
+                <label for="nombresInput" class="form-label">Nombre(s)</label>
+                <input type="text" class="form-control" id="nombresInput" required>
+            </div>
             <div class="mb-3">
                 <label for="emailInput" class="form-label">Correo electrónico</label>
-                <input type="email" class="form-control" id="emailInput">
+                <input type="email" class="form-control" id="emailInput" required>
             </div>
             <div class="mb-3">
-                <label for="passwordEmail" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="passwordEmail">
+                <label for="telefonoInput" class="form-label">Teléfono</label>
+                <input type="tel" class="form-control" id="telefonoInput" required>
             </div>
             <div class="mb-3">
-                <a href="registro.html">¿Aún no tienes cuenta?, Regístrate</a>
+                <label for="mensajeInput" class="form-label">Mensaje</label>
+                <textarea name="mensajeArea" id="mensajeInputcols="100" rows="6" class="form-control" required></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Acceder</button>
+            <button type="submit" class="btn btn-primary">Eniar</button>
         </form>
     </div>
 
