--- a/Views/registro.html
+++ b/Views/registro.html
@@ -1,72 +1,113 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title></title>
-        <link
-            rel="stylesheet"
-            type="text/css"
-            href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-        />
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"> Proyecto </a>
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div
-                    class="collapse navbar-collapse"
-                    id="navbarSupportedContent"
-                >
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a
-                                class="nav-link active"
-                                aria-current="page"
-                                href="#"
-                                >Home</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#acercaDeMi">Acerca de mí</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://ovallehoy.cl/" target="_blank">Blog</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
-                        </li>
-                    </ul>
-                    <div class="d-flex">
-                        <a class="btn" href="./inicioSesion.html" target="_self">Iniciar sesion</a>
-                        <a class="btn btn-outline-success" href="./registro.html" target="_self">
-                            Registrarse
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title></title>
+    <link rel="stylesheet" type="text/css" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../assets/css/estilos.css">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"> Proyecto </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Secciones
                         </a>
-                    </div>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item disabled" href="#acercaDeMi">Acerca de mí</a></li>
+                          <li><a class="dropdown-item disabled" href="#record">Records</a></li>
+                          <li><a class="dropdown-item disabled" href="#pelicula">Película</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="#redesSociales">Redes sociales</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://ovallehoy.cl/" target="_blank">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
+                </ul>
+                <div class="d-flex">
+                    <a class="btn" href="./inicioSesion.html" target="_self">Iniciar sesion</a>
+                    <a class="btn btn-primary" href="./registro.html" target="_self">
+                        Registrarse
+                    </a>
                 </div>
             </div>
-        </nav>
+        </div>
+    </nav>
 
-        
-        
+    <div class="container">
+        <form>
+            <div class="mb-3">
+                <label for="nombresInput" class="form-label">Nombre(s)</label>
+                <input type="text" class="form-control" id="nombresInput" required>
+            </div>
+            <div class="mb-3">
+                <label for="apPaternoInput" class="form-label">Apellido Paterno</label>
+                <input type="text" class="form-control" id="apPaternoInput" required>
+            </div>
+            <div class="mb-3">
+                <label for="apMaternoInput" class="form-label">Apellido Materno</label>
+                <input type="text" class="form-control" id="apMaternoInput" required>
+            </div>
+            <div class="mb-3">
+                <label for="emailInput" class="form-label">Correo electrónico</label>
+                <input type="email" class="form-control" id="emailInput" required>
+            </div>
+            <div class="mb-3">
+                <label for="passwordInput" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="passwordInpu" required>
+            </div>
+            <div class="mb-3">
+                <label for="passwordConfirmInput" class="form-label">Confirma contraseña</label>
+                <input type="password" class="form-control" id="passwordConfirmInput" required>
+            </div>
+            <div class="mb-3">
+                <a href="inicioSesion.html">¿Ya tienes cuenta?, Inicia sesión</a>
+            </div>
+            <button type="submit" class="btn btn-primary">Acceder</button>
+        </form>
+    </div>
 
-        <script
-            type="text/javascript"
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        ></script>
-    </body>
-	<footer>
-        
-	</footer>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+<footer id="redesSociales" class="lineaSeparar">
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4">
+            <a href="https://www.facebook.com/pelizzari.umberto/" target="_blank">
+                <img src="../assets/images/facebook.png" alt="facebook" width="50px" class="separacionIcons">
+            </a>
+            <a href="https://twitter.com/UPELIZZARI" target="_blank">
+                <img src="../assets/images/twitter.png" alt="twitter" width="50px" class="separacionIcons">
+            </a>
+            <a href="https://www.instagram.com/umberto_pelizzari/" target="_blank">
+                <img src="../assets/images/instagram.png" alt="instagram" width="50px" class="separacionIcons">
+            </a>
+            <a href="https://www.umbertopelizzari.com/" target="_blank">
+                <img src="../assets/images/world-wide-web.png" alt="instagram" width="50px" class="separacionIcons">
+            </a>
+        </div>
+        <div class="col-4"></div>
+    </div>
+    <p class="text-center">Todos los derechos reservador a .........</p>
+</footer>
+
 </html>
