--- a/Views/registro.html
+++ b/Views/registro.html
@@ -36,7 +36,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://ovallehoy.cl/" target="_blank">Blog</a>
+                        <a class="nav-link" href="https://www.umbertopelizzari.com/" target="_blank">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
